# jobs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: index.html
jobs/: cli.py
jobs/functions/: api.py  models.py  parser.py
jobs/utils/: api.py  history.py  matcher.py  models.py  parser.py  providers.py  types.py
tests/: confest.py  test_search.py
