[project]
name = "jobs-cli"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "httpx",
    "typer",
    "rich",
]

[project.scripts]
jobs-cli = "jobs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobs"]